TEST_PROGRAMS/VALID/05/switchs.go
/* Switch statements. */

package main

func main() {
	switch food := "dill pickle"; food {
		case "tomato":
			// Do something
		case "pepper":
			// Do something
		case "cucumber":
			// Do something
		default:
			// Do something
	}

	switch food := "dill pickle"; 
	{
		case food == "tomato":
			// Do something
		case food == "pepper":
			// Do something
		case food == "cucumber":
			// Do something
		default:
			// Do something
	}
	switch food := "dill pickle"
	{
		case food == "tomato":
			// Do something
		case food == "pepper":
			// Do something
		case food == "cucumber":
			// Do something
		default:
			// Do something
	}

	food := "dill pickle"

	switch food {
		case "tomato":
			// Do something
		case "pepper":
			// Do something
		case "cucumber":
			// Do something
	}

	switch 
	{
		case food == "tomato":
			// Do something
		case food == "pepper":
			// Do something
		case food == "cucumber":
			// Do something
	}

	switch {
		case food == "tomato":
			// Do something
		case food == "pepper":
			// Do something
		case food == "cucumber":
			// Do something
	}
}
