TEST_PROGRAMS/INVALID/05/switch_rob_brace_no_init_stmt.go
/* Switch statements. */

package main

func main() {

	food := "dill pickle"

	switch food 
	{
		case "tomato":
			// Do something
		case "pepper":
			// Do something
		case "cucumber":
			// Do something
	}

}
